Fix to landing z-index

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
     width: 100%;
     position:absolute;
-    z-index: 100;
+    z-index: 1;
     padding-top: 25px;
 }
 
